--- a/app/src/main/res/layout/recycler_item.xml
+++ b/app/src/main/res/layout/recycler_item.xml
@@ -18,6 +18,7 @@
             android:src="@drawable/searchicon"
             android:scaleType="fitXY" />
 
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -56,8 +57,12 @@
                 android:textSize="22sp"
                 />
 
-        </LinearLayout>
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="2dp"
+                android:background="@drawable/line_devider_shape"/>
 
+        </LinearLayout>
 
     </LinearLayout>
 
