--- a/app/src/main/res/layout/activity_recycler_item_detail.xml
+++ b/app/src/main/res/layout/activity_recycler_item_detail.xml
@@ -41,6 +41,7 @@
                 android:textSize="25sp"
                 android:textStyle="bold"/>
 
+
             <TextView
                 android:id="@+id/txtFGenreindetail"
                 android:gravity="center"
@@ -89,6 +90,7 @@
                 android:textSize="22sp"
                 />
 
+
         </LinearLayout>
 
     <Button
@@ -102,6 +104,19 @@
         android:padding="5dp"
         android:textColor="@color/black"
         android:background="@color/mylightgray"
+        />
+
+    <TextView
+        android:id="@+id/txtFImageLink"
+        android:visibility="invisible"
+        android:gravity="center"
+        android:layout_width="match_parent"
+        android:text="2021"
+        android:padding="2dp"
+        android:paddingStart="5dp"
+        android:textColor="@color/white"
+        android:layout_height="wrap_content"
+        android:textSize="5sp"
         />
 
 
