--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,12 +31,11 @@
         <ImageView
             android:id="@+id/imgSearch"
             android:layout_weight="2"
-            android:scaleType="fitXY"
+            android:scaleType="centerInside"
             android:layout_height="43dp"
-            android:src="@drawable/searchicon"
             android:padding="5dp"
-            android:layout_margin="3dp"
-            android:background="@color/mylightgray"
+            android:layout_margin="0dp"
+            android:background="@drawable/search_up_down"
             android:layout_width="0dp" />
 
         <ImageView
@@ -44,10 +43,9 @@
             android:layout_weight="2"
             android:scaleType="fitXY"
             android:layout_height="43dp"
-            android:src="@drawable/offline_data_icon"
-            android:layout_margin="3dp"
+            android:layout_margin="0dp"
             android:padding="5dp"
-            android:background="@color/mylightgray"
+            android:background="@drawable/offline_data_up_down"
             android:layout_width="0dp" />
 
     </LinearLayout>
